syntax = "proto3";
package proto;

service API {
    rpc Deploy(DeployRequest) returns (Response);
    rpc CreateIdentity(CreateIdentityRequest) returns (Response);
}

message DeployRequest {
    string id = 1;
    string url = 2;
    string language = 3;
    string releaseTag = 4;
    bytes buildParam = 5;
    string memory = 6;
    string cpuShare = 7;
}

message CreateIdentityRequest {
    string id = 1;
    string email = 2;
    string pubKey = 3;
}

message Response {
    string id = 1;
    int32 status = 2;
    bytes body = 3;
}
